# internal/swagger/models/blog_update_request.go
@@ -1,0 +1,88 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	nullable "github.com/romanyx/nullable"
+)
+
+// BlogUpdateRequest Blog update request
+// swagger:model BlogUpdateRequest
+type BlogUpdateRequest struct {
+
+	// Blog markdown body
+	// Required: true
+	Markdown *string `json:"markdown"`
+
+	// Blog timestamp
+	PublishedAt nullable.Int `json:"published_at,omitempty"`
+
+	// Blog title
+	// Required: true
+	Title *string `json:"title"`
+}
+
+// Validate validates this blog update request
+func (m *BlogUpdateRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateMarkdown(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateTitle(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *BlogUpdateRequest) validateMarkdown(formats strfmt.Registry) error {
+
+	if err := validate.Required("markdown", "body", m.Markdown); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *BlogUpdateRequest) validateTitle(formats strfmt.Registry) error {
+
+	if err := validate.Required("title", "body", m.Title); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BlogUpdateRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BlogUpdateRequest) UnmarshalBinary(b []byte) error {
+	var res BlogUpdateRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
